--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>MERRYL CANLAS' WebDev Journey</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
@@ -11,24 +11,29 @@
 <body>
     <div id = "main">
         <div id = "nav">
-            <div><a href="#bio"><img src = "Vector_nobg.png" class = "nav_icons"></a></div>
-            <div><a href="#avion"><img src = "avion_logo_black_nobg.png" class = "nav_icons"></a></div>
-            <div><a href="#projects"><img src = "folder.png" class = "nav_icons"></a></div>
-            <div><a href="#contact"><img src = "heart.png" class = "nav_icons"></a></div>
+            <div class = "navi"><a href="#bio"><abbr title = "HOME"><img src = "Vector_nobg.png" class = "nav_icons"></abbr></a></div>
+            <div class = "navi"><a href="#avion"><abbr title = "AVION SCHOOL"><img src = "avion_logo_black_nobg.png" class = "nav_icons"></abbr></a></div>
+            <div class = "navi"><a href="#projects"><abbr title = "PROJECTS"><img src = "folder.png" class = "nav_icons"></abbr></a></div>
+            <div class = "navi"><a href="#contact"><abbr title = "CONTACT ME"><img src = "heart.png" class = "nav_icons"></abbr></a></div>
         </div>
 
         <div id = "content">
             <div id = "bio" class = "white">
-                    sdfgssdaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaadf
+                <div><h1>I am Mek.</h1>
+                <h3>I love coffee, dark chocolates, numbers.. and now, coding 💻😎 </h3></div>
+                <div><img src = "Vector_nobg_pink.png" id = "vector_mek"></div>
             </div>
             <div id = "avion" class = "black">
-                    sdfsdf
+                <h1>As Avion School Student</h1>
+                <h3>Feel free to browse my amateur outputs 😅</h3>
             </div>
             <div id = "projects" class = "white">
-                    sdgdfg
+                <h1>Freelance Projects</h1>
+                <h3>Here you can see my works 😁</h3>
             </div>
             <div id = "contact" class = "black">
-                    sgvsdfs
+                <h1>Contact Me!</h1>
+                <h3>Send me an email to <a href="mailto:merrylcanlas@gmail.com">merrylcanlas@gmail.com</a> 📧</h3>
             </div>
         </div>
 
