2021 MAR 02 texts still not responsive and not wrapping

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             <div id = "avion" class = "black">
                 <h1>As Avion School Student</h1>
                 <h3>Feel free to browse my amateur outputs 😅</h3>
+                <div id = "avion_projs">
+                    <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Best_Practice_Page/day1_homework.html">Best Practice Page</a></div>
+                    <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/HTML_Email_Activity/day2_homework.html">HTML Email</a></div>
+                    <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Tribute_Page/day4_assignment.html">Tribute Page</a></div>
+                    <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Survey_Form/day6_assignment.html">Survey Form</a></div>
+                    <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Test_Email_Coding/email.html">Email Validation Activity</a></div>
+                    <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Chess_Board/chess.html">Responsive Chessboard</a></div>
+                </div>
             </div>
             <div id = "projects" class = "white">
                 <h1>Freelance Projects</h1>
