modified as of march 19 with additional projects and minor css modifications

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id = "content">
             <div id = "bio" class = "white">
                 <div><h1>I am Mek.</h1>
-                <h3>I love coffee, dark chocolates, numbers.. and now, coding 💻😎 </h3></div>
+                <h3>I love coffee, dark chocolates, and numbers.<br> I do writing and coding as hobbies. 💻😎 </h3></div>
                 <div><img src = "Vector_nobg_pink.png" id = "vector_mek"></div>
             </div>
             <div id = "avion" class = "black">
@@ -32,7 +32,10 @@
                     <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Tribute_Page/day4_assignment.html">Tribute Page</a></div>
                     <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Survey_Form/day6_assignment.html">Survey Form</a></div>
                     <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Test_Email_Coding/email.html">Email Validation Activity</a></div>
-                    <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Chess_Board/chess.html">Responsive Chessboard</a></div>
+                    <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Chess_Board/chess.html">Chessboard - Flex</a></div>
+                    <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Chess_Board_2/chessgrid.html">Chessboard - Grid</a></div>
+                    <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Product_Landing_Page/product.html">Product Landing Page</a></div>
+                    <div class = "avion_proj"><a href = "https://mehcanism.github.io/batch7-activities/Tic_Tac_Toe/tictactoe.html">Tic Tac Toe</a></div>
                 </div>
             </div>
             <div id = "projects" class = "white">
